--- a/src/styles/bagstyles.css
+++ b/src/styles/bagstyles.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     position: absolute;
     overflow-y: scroll;
-    width: 50vw;
+    width: min(50vw,500px);
     height: calc(100vh - 100px);
     top: 100px;
     left: 100vw;
@@ -19,17 +19,17 @@
 }
 
 @-webkit-keyframes slide {
-    100% { left: 50vw; }
+    100% { left: max(50vw, calc(100vw - 500px)); }
 }
 
 @keyframes slide {
-    100% { left: 50vw; }
+    100% { left: max(50vw, calc(100vw - 500px)); }
 }
 
 .faded-background{
     display: flex;
     position: absolute;
-    width: 50vw;
+    width: max(50vw, calc(100vw - 500px));
     height: calc(100vh - 100px);
     top: 100px;
     left: 100vw;
@@ -63,7 +63,13 @@
 
 .bag-title{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 4vw;
+    font-size: min(4vw, 40px);
+    font-weight: bold;
+}
+
+.checkout-text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: min(3vw, 35px);
     font-weight: bold;
 }
 
@@ -95,7 +101,7 @@
     margin: 0px;
     margin-bottom: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2vw;
+    font-size: min(2vw,20px);
     font-weight: bold;
 }
 
@@ -115,8 +121,8 @@
 .selection-image{
     display: flex;
     position: relative;
-    height: 3vw;
-    width: 3vw;
+    height: min(3vw,30px);
+    width: min(3vw,30px);
     margin: 0;
 }
 
@@ -135,12 +141,24 @@
     font-size: large;
 }
 
+.checkout-container{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: auto;
+    height: auto;
+    margin: auto;
+    margin-left: 0;
+    padding-bottom: 20px;
+}
+
 .checkout-button{
     display: flex;
     position: relative;
-    width: 30vw;
-    height: 4vw;
+    width: min(30vw,500px);
+    height: min(4vw,50px);
     margin: auto;
+    margin-left: 0;
     background-color: rgb(255, 196, 0, 0.9);
     user-select: none;
 }
@@ -169,3 +187,33 @@
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+.error-message-holder{
+    display: flex;
+    position: relative;
+    width: min(30vw,500px);
+    height: min(4vw,50px);
+    margin: auto;
+    margin-top: 0px;
+    margin-left: 0px;
+    background-color: rgba(255, 0, 0, 0.9);
+    color: black;
+    font-weight: bold;
+    font-size: min(1.7vw,20px);
+    font-family:Arial, Helvetica, sans-serif;
+    user-select: none;
+    overflow: hidden;
+}
+
+.slide-up, .slide-down {
+    overflow:hidden;
+  }
+
+.slide-up > div, .slide-down > div {
+    transform: translateY(min(-4vw,-50px));
+    transition: .4s ease-in-out;
+}
+.slide-down > div {            
+    transform: translateY(0);
+} 
+
